[gd_scene load_steps=8 format=2]

[ext_resource path="res://Src/Machines/MachineMechanisms/RocksPath.gd" type="Script" id=1]
[ext_resource path="res://Src/Rocks&Minerals/MineRocks.tscn" type="PackedScene" id=2]
[ext_resource path="res://Src/Assets/Items/rocks1.png" type="Texture" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -1, 1, 0, 0, 0, 0, 91, 2, 0, 0, 0, 0, 90, -450 )
}

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.291925, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.21519, 0.21519, 0.21519, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 42.0
angular_velocity = 254.12
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 4 )

[node name="RocksPath" type="Path2D"]
curve = SubResource( 1 )
script = ExtResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="."]
position = Vector2( -1, 1 )
rotation = 0.0108691
loop = false

[node name="MineRocks" parent="PathFollow2D" instance=ExtResource( 2 )]

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 90, -450 )

[node name="RockSplatter" type="Particles2D" parent="."]
visible = false
position = Vector2( 90, -300 )
amount = 18
fixed_fps = 12
process_material = SubResource( 2 )
texture = ExtResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
